Catalogo ya se muestra lo que se guarda en la base, como tambien ya se puede subir nuevos lentes al catalogo

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="AzulCielo">#64BDCD</color>
     <color name="AzulMarino">#1C2D66</color>
+    <color name="Rojo">#D10000</color>
 
 </resources>
