Consulta pacientes, con editar cada paciente

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,6 @@
     <color name="AzulCielo">#64BDCD</color>
     <color name="AzulMarino">#1C2D66</color>
     <color name="Rojo">#D10000</color>
+    <color name="Verde">#5FC61A</color>
 
 </resources>
